# omnyssh

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  package-lock.json
doc/: omny.1
src/: app.rs  event.rs  main.rs
src/config/: app_config.rs
src/ssh/: sftp.rs
src/ui/: popup.rs  terminal.rs
src/utils/: mod.rs  mouse.rs
